--- a/Homework-3-BeijingSubway.ipynb
+++ b/Homework-3-BeijingSubway.ipynb
@@ -137,17 +137,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### 处理存储的北京地铁XX线的html，从首末时间表中抓取车站信息，存在graphSubway，stationsEachLine，linesEachStation结构中"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -304,360 +302,183 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 搜索"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Djikstra算法，速度快，只输出一条最短路径。后面写了个A*算法版本，可以输出多条最短路径，但感觉效率有点问题,算最少换乘的速度很慢。"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import \n",
-    "def search_djikstra(graph,start):\n",
+    "import numpy as np\n",
+    "def search_djikstra(graph,start,is_goal_predicate,measure_distance):\n",
     "    frontier = [start]\n",
     "    explored = set()\n",
     "    dist = {}\n",
     "    prev = {}\n",
+    "    for e in graph:\n",
+    "        dist[e] = np.inf\n",
+    "        prev[e] = None\n",
     "    dist[start] = 0\n",
     "    \n",
+    "    e = None\n",
     "    while frontier:\n",
     "        node = frontier.pop(0)\n",
-    "        \n",
-    "        for n in graph[node]:\n",
-    "            if n in explored: continue\n",
-    "            alt = dist[node] + 1.0\n",
+    "        if is_goal_predicate(node): \n",
+    "            e = node\n",
+    "            break\n",
+    "            \n",
+    "        for neighbor in graph[node]:\n",
+    "            if neighbor in explored: continue\n",
+    "            alt = dist[node] + measure_distance(node,neighbor,prev)\n",
+    "            if alt < dist[neighbor]:\n",
+    "                dist[neighbor] = alt\n",
+    "                prev[neighbor] = node\n",
+    "            frontier.append(neighbor)\n",
+    "            frontier = sorted(frontier,key=lambda x:dist[x])\n",
+    "            explored.add(neighbor)\n",
+    "    \n",
+    "    # path from prev\n",
+    "    path = []\n",
+    "    while e :\n",
+    "        path.insert(0,e)\n",
+    "        e = prev[e]\n",
+    "    return path\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "巴沟\n",
-      "苏州街\n",
-      "海淀黄庄\n",
-      "知春里\n",
-      "知春路\n",
-      "西土城\n",
-      "牡丹园\n",
-      "健德门\n",
-      "北土城\n",
-      "安贞门\n",
-      "惠新西街南口\n",
-      "芍药居\n",
-      "太阳宫\n",
-      "三元桥\n",
-      "亮马桥\n",
-      "农业展览馆\n",
-      "团结湖\n",
-      "呼家楼\n",
-      "金台夕照\n",
-      "国贸\n",
-      "双井\n",
-      "劲松\n",
-      "潘家园\n",
-      "十里河\n",
-      "分钟寺\n",
-      "成寿寺\n",
-      "宋家庄\n",
-      "石榴庄\n",
-      "大红门\n",
-      "角门东\n",
-      "角门西\n",
-      "草桥\n",
-      "纪家庙\n",
-      "首经贸\n",
-      "丰台站\n",
-      "泥洼\n",
-      "西局\n",
-      "六里桥\n",
-      "莲花桥\n",
-      "公主坟\n",
-      "西钓鱼台\n",
-      "慈寿寺\n",
-      "车道沟\n",
-      "长春桥\n",
-      "火器营\n",
-      "西直门\n",
-      "大钟寺\n",
-      "五道口\n",
-      "上地\n",
-      "西二旗\n",
-      "龙泽\n",
-      "回龙观\n",
-      "霍营\n",
-      "立水桥\n",
-      "北苑\n",
-      "望京西\n",
-      "光熙门\n",
-      "柳芳\n",
-      "东直门\n",
-      "张郭庄\n",
-      "园博园\n",
-      "大瓦窑\n",
-      "郭庄子\n",
-      "大井\n",
-      "七里庄\n",
-      "北京南站\n",
-      "永定门外\n",
-      "景泰\n",
-      "蒲黄榆\n",
-      "方庄\n",
-      "北工大西门\n",
-      "九龙山\n",
-      "大望路\n",
-      "金台路\n",
-      "朝阳公园\n",
-      "枣营\n",
-      "东风北桥\n",
-      "将台\n",
-      "望京南\n",
-      "阜通\n",
-      "望京\n",
-      "东湖渠\n",
-      "来广营\n",
-      "善各庄\n",
-      "俸伯\n",
-      "顺义\n",
-      "石门\n",
-      "南法信\n",
-      "后沙峪\n",
-      "花梨坎\n",
-      "国展\n",
-      "孙河\n",
-      "马泉营\n",
-      "崔各庄\n",
-      "望京东\n",
-      "关庄\n",
-      "大屯路东\n",
-      "安立路\n",
-      "奥林匹克公园\n",
-      "北沙滩\n",
-      "六道口\n",
-      "清华东路西口\n",
-      "苹果园\n",
-      "古城\n",
-      "八角游乐园\n",
-      "八宝山\n",
-      "玉泉路\n",
-      "五棵松\n",
-      "万寿路\n",
-      "军事博物馆\n",
-      "木樨地\n",
-      "南礼士路\n",
-      "复兴门\n",
-      "西单\n",
-      "天安门西\n",
-      "天安门东\n",
-      "王府井\n",
-      "东单\n",
-      "建国门\n",
-      "永安里\n",
-      "四惠\n",
-      "四惠东\n",
-      "积水潭\n",
-      "鼓楼大街\n",
-      "安定门\n",
-      "雍和宫\n",
-      "东四十条\n",
-      "朝阳门\n",
-      "北京站\n",
-      "崇文门\n",
-      "前门\n",
-      "和平门\n",
-      "宣武门\n",
-      "长椿街\n",
-      "阜成门\n",
-      "车公庄\n",
-      "天宫院\n",
-      "生物医药基地\n",
-      "义和庄\n",
-      "黄村火车站\n",
-      "黄村西大街\n",
-      "清源路\n",
-      "枣园\n",
-      "高米店南\n",
-      "高米店北\n",
-      "西红门\n",
-      "新宫\n",
-      "公益西桥\n",
-      "马家堡\n",
-      "陶然亭\n",
-      "菜市口\n",
-      "灵境胡同\n",
-      "西四\n",
-      "平安里\n",
-      "新街口\n",
-      "动物园\n",
-      "国家图书馆\n",
-      "魏公村\n",
-      "人民大学\n",
-      "中关村\n",
-      "北京大学东门\n",
-      "圆明园\n",
-      "西苑\n",
-      "北宫门\n",
-      "刘家窑\n",
-      "天坛东门\n",
-      "磁器口\n",
-      "灯市口\n",
-      "东四\n",
-      "张自忠路\n",
-      "北新桥\n",
-      "和平里北街\n",
-      "和平西桥\n",
-      "惠新西街北口\n",
-      "北苑路北\n",
-      "立水桥南\n",
-      "天通苑南\n",
-      "天通苑\n",
-      "天通苑北\n",
-      "海淀五路居\n",
-      "花园桥\n",
-      "白石桥南\n",
-      "车公庄西\n",
-      "北海北\n",
-      "南锣鼓巷\n",
-      "东大桥\n",
-      "十里堡\n",
-      "青年路\n",
-      "褡裢坡\n",
-      "黄渠\n",
-      "常营\n",
-      "草房\n",
-      "物资学院路\n",
-      "通州北关\n",
-      "北运河西\n",
-      "郝家府\n",
-      "东夏园\n",
-      "潞城\n",
-      "北京西站\n",
-      "湾子\n",
-      "达官营\n",
-      "广安门内\n",
-      "虎坊桥\n",
-      "珠市口\n",
-      "桥湾\n",
-      "广渠门内\n",
-      "广渠门外\n",
-      "大郊亭\n",
-      "百子湾\n",
-      "化工\n",
-      "南楼梓庄\n",
-      "欢乐谷景区\n",
-      "双合\n",
-      "焦化厂\n",
-      "朱辛庄\n",
-      "育知路\n",
-      "平西府\n",
-      "回龙观东大街\n",
-      "育新\n",
-      "西小口\n",
-      "永泰庄\n",
-      "林萃桥\n",
-      "森林公园南门\n",
-      "奥体中心\n",
-      "安华桥\n",
-      "安德里北街\n",
-      "什刹海\n",
-      "郭公庄\n",
-      "丰台科技园\n",
-      "科怡路\n",
-      "丰台南路\n",
-      "丰台东大街\n",
-      "六里桥东\n",
-      "白堆子\n",
-      "肖村\n",
-      "小红门\n",
-      "旧宫\n",
-      "亦庄桥\n",
-      "亦庄文化园\n",
-      "万源街\n",
-      "荣京东街\n",
-      "荣昌东街\n",
-      "同济南路\n",
-      "经海路\n",
-      "次渠南\n",
-      "次渠\n",
-      "高碑店\n",
-      "传媒大学\n",
-      "双桥\n",
-      "管庄\n",
-      "八里桥\n",
-      "通州北苑\n",
-      "果园\n",
-      "九棵树\n",
-      "梨园\n",
-      "临河里\n",
-      "土桥\n",
-      "大葆台\n",
-      "稻田\n",
-      "长阳\n",
-      "篱笆房\n",
-      "广阳城\n",
-      "良乡大学城北\n",
-      "良乡大学城\n",
-      "良乡大学城西\n",
-      "良乡南关\n",
-      "苏庄\n",
-      "阎村东\n",
-      "昌平西山口\n",
-      "十三陵景区\n",
-      "昌平\n",
-      "昌平东关\n",
-      "北邵洼\n",
-      "南邵\n",
-      "沙河高教园\n",
-      "沙河\n",
-      "巩华城\n",
-      "生命科学园\n",
-      "3号航站楼\n",
-      "2号航站楼\n"
-     ]
-    }
-   ],
-   "source": [
-    "for e in graphSubway:\n",
-    "    print (e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_succsssors(froninter, graph):\n",
-    "    return graph[froninter]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_goal(predicate):\n",
     "    def _predicate(condition):\n",
     "        return predicate(condition)\n",
-    "    return _predicate"
+    "    return _predicate\n",
+    "\n",
+    "# 计算路径的换乘信息 [(始发站，线路A),(换乘站1，线路B)....]\n",
+    "def transfer_info_path(path):  \n",
+    "    if not path: return []\n",
+    "    lineNow = list(set(linesEachStation[path[0]]).intersection(set(linesEachStation[path[1]])))[0]\n",
+    "    transferList = [(path[0],lineNow)]    \n",
+    "    for i in range(2,len(path)):\n",
+    "        if lineNow not in linesEachStation[path[i]]:\n",
+    "            lineNow = list(set(linesEachStation[path[i]]).intersection(set(linesEachStation[path[i-1]])))[0]\n",
+    "            transferList.append((path[i-1],lineNow))\n",
+    "    return transferList\n",
+    "\n",
+    "# 根据换乘信息，打印路径\n",
+    "def print_path(path):\n",
+    "    transferList = transfer_info_path(path)\n",
+    "    strPath = ''\n",
+    "    strPath = strPath + ('%s --%s-->' % (transferList[0][0],transferList[0][1][4:]))\n",
+    "    for i in range(1,len(transferList)):\n",
+    "        strPath = strPath + (' %s --%s-->' % (transferList[i][0],transferList[i][1][4:]))\n",
+    "    strPath = strPath + (' %s (%s站)' % (path[-1],len(path)-1))\n",
+    "    print (strPath)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def is_goal(node, destination): \n",
-    "    return node ==  desitnation"
+    "# 各种measure函数，计算frontier node和该node的neighbor之间的距离\n",
+    "def measure_mini_distance(node,neighbor,prev):\n",
+    "    return 1\n",
+    "\n",
+    "def measure_mini_transfer(node,neighbor,prev):\n",
+    "    p = prev[node]\n",
+    "    commonLine = set(linesEachStation[p]).intersection(set(linesEachStation[node])).intersection(set(linesEachStation[neighbor]))\n",
+    "    if commonLine:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return 1\n",
+    "\n",
+    "def measure_mini_comprehensive(node,neighbor,prev):\n",
+    "    # 假设换乘1次时间等于坐3个站\n",
+    "     return 3*measure_mini_transfer(node,neighbor,prev)+measure_mini_distance(node,neighbor,prev)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "苏庄 --房山线--> 郭公庄 --9号线--> 六里桥 --10号线--> 公主坟 --1号线--> 复兴门 --2号线--> 阜成门 (23站)\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = search_djikstra(graphSubway,'苏庄', lambda n: n == '阜成门',measure_mini_distance)\n",
+    "print_path(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "苏庄 --房山线--> 郭公庄 --9号线--> 白石桥南 --6号线--> 车公庄 --2号线--> 阜成门 (24站)\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = search_djikstra(graphSubway,'苏庄', lambda n: n == '阜成门',measure_mini_transfer)\n",
+    "print_path(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "苏庄 --房山线--> 郭公庄 --9号线--> 军事博物馆 --1号线--> 复兴门 --2号线--> 阜成门 (23站)\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = search_djikstra(graphSubway,'苏庄', lambda n: n == '阜成门',measure_mini_comprehensive)\n",
+    "print_path(path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A* search, 可输出多条路径，但效率有问题，计算 最小换乘很慢"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +496,7 @@
     "            if city in path: continue # remove the loop\n",
     "            new_path = path + [city]\n",
     "            pathes.append(new_path)\n",
-    "            if is_goal_predicate(city): ##return new_path\n",
+    "            if is_goal_predicate(city): \n",
     "                chosen_pathes.append(new_path)\n",
     "        pathes = strategy_func(pathes)\n",
     "        seenPathes.add(''.join(path))\n",
@@ -684,77 +505,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_succsssors(froninter, graph):\n",
+    "    return graph[froninter]\n",
+    "\n",
     "def sort_pathes(pathes, func,beam):\n",
     "    return sorted(pathes, key=func)[:beam]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
     "def mini_distance(pathes):\n",
-    "    return sort_pathes(pathes, lambda p: len(p), beam=50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 429,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def transfer_info_path(path):  \n",
-    "    if not path: return []\n",
-    "    lineNow = list(set(linesEachStation[path[0]]).intersection(set(linesEachStation[path[1]])))[0]\n",
-    "    transferList = [(path[0],lineNow)]    \n",
-    "    for i in range(2,len(path)):\n",
-    "        if lineNow not in linesEachStation[path[i]]:\n",
-    "            lineNow = list(set(linesEachStation[path[i]]).intersection(set(linesEachStation[path[i-1]])))[0]\n",
-    "            transferList.append((path[i-1],lineNow))\n",
-    "    return transferList\n",
-    "            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 443,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return sort_pathes(pathes, lambda p: len(p), beam=50)\n",
+    "\n",
     "def mini_transfer(pathes):\n",
-    "    return sort_pathes(pathes,lambda p:len(transfer_info_path(p))-1,beam=50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 444,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def comprehensive_sort(pathes):\n",
+    "    return sort_pathes(pathes,lambda p:len(transfer_info_path(p))-1,beam=50)\n",
+    "\n",
+    "def mini_comprehensive(pathes):\n",
     "    return sort_pathes(pathes,lambda p:(len(transfer_info_path(p))-1)*3+len(p),beam=50) # 假定换乘一次时间等于坐3个站"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_path(path):\n",
-    "    transferList = transfer_info_path(path)\n",
-    "    strPath = ''\n",
-    "    strPath = strPath + ('%s --%s-->' % (transferList[0][0],transferList[0][1][4:]))\n",
-    "    for i in range(1,len(transferList)):\n",
-    "        strPath = strPath + (' %s --%s-->' % (transferList[i][0],transferList[i][1][4:]))\n",
-    "    strPath = strPath + (' %s (%s站)' % (path[-1],len(path)-1))\n",
-    "    print (strPath)\n",
-    "\n",
+    "# 打印头5条路线\n",
     "def print_top_pathes(pathes,n=5):\n",
     "    for i in range(len(pathes)):\n",
     "        if i >= n : break\n",
@@ -763,16 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pathes = search_destination(graphSubway, '苏庄', get_succsssors, lambda n: n == '阜成门', mini_distance)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -788,51 +563,64 @@
     }
    ],
    "source": [
+    "pathes = search_destination(graphSubway, '苏庄', get_succsssors, lambda n: n == '阜成门', mini_distance)\n",
     "print_top_pathes(pathes,n=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pathes = search_destination(graphSubway, '苏庄', get_succsssors, lambda n: n == '平西府', mini_transfer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "苏庄 --房山线--> 郭公庄 --9号线--> 白石桥南 --6号线--> 南锣鼓巷 --8号线--> 平西府 (41站)\n",
-      "苏庄 --房山线--> 郭公庄 --9号线--> 军事博物馆 --1号线--> 建国门 --2号线--> 鼓楼大街 --8号线--> 平西府 (47站)\n",
-      "苏庄 --房山线--> 郭公庄 --9号线--> 白石桥南 --6号线--> 车公庄 --2号线--> 鼓楼大街 --8号线--> 平西府 (51站)\n",
-      "苏庄 --房山线--> 郭公庄 --9号线--> 国家图书馆 --4号线--> 平安里 --6号线--> 南锣鼓巷 --8号线--> 平西府 (43站)\n",
-      "苏庄 --房山线--> 郭公庄 --9号线--> 六里桥 --10号线--> 角门西 --4号线--> 海淀黄庄 --10号线--> 芍药居 --13号线--> 霍营 --8号线--> 平西府 (54站)\n"
+      "苏庄 --房山线--> 郭公庄 --9号线--> 白石桥南 --6号线--> 车公庄 --2号线--> 阜成门 (24站)\n",
+      "苏庄 --房山线--> 郭公庄 --9号线--> 军事博物馆 --1号线--> 复兴门 --2号线--> 阜成门 (23站)\n",
+      "苏庄 --房山线--> 郭公庄 --9号线--> 国家图书馆 --4号线--> 西直门 --2号线--> 阜成门 (26站)\n",
+      "苏庄 --房山线--> 郭公庄 --9号线--> 军事博物馆 --1号线--> 建国门 --2号线--> 阜成门 (38站)\n",
+      "苏庄 --房山线--> 郭公庄 --9号线--> 国家图书馆 --4号线--> 西直门 --2号线--> 阜成门 (40站)\n"
      ]
     }
    ],
    "source": [
+    "pathes = search_destination(graphSubway, '苏庄', get_succsssors, lambda n: n == '阜成门', mini_transfer)\n",
     "print_top_pathes(pathes,n=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 156,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "苏庄 --房山线--> 郭公庄 --9号线--> 军事博物馆 --1号线--> 复兴门 --2号线--> 阜成门 (23站)\n",
+      "苏庄 --房山线--> 郭公庄 --9号线--> 白石桥南 --6号线--> 车公庄 --2号线--> 阜成门 (24站)\n",
+      "苏庄 --房山线--> 郭公庄 --9号线--> 六里桥 --10号线--> 公主坟 --1号线--> 复兴门 --2号线--> 阜成门 (23站)\n",
+      "苏庄 --房山线--> 郭公庄 --9号线--> 国家图书馆 --4号线--> 西直门 --2号线--> 阜成门 (26站)\n",
+      "苏庄 --房山线--> 郭公庄 --9号线--> 六里桥 --10号线--> 慈寿寺 --6号线--> 车公庄 --2号线--> 阜成门 (25站)\n"
+     ]
+    }
+   ],
    "source": [
-    "pathes = search_destination(graphSubway, '苏庄', get_succsssors, lambda n: n == '平西府', comprehensive_sort)"
+    "pathes = search_destination(graphSubway, '苏庄', get_succsssors, lambda n: n == '阜成门', mini_comprehensive)\n",
+    "print_top_pathes(pathes,n=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -846,9 +634,7 @@
      ]
     }
    ],
-   "source": [
-    "print_top_pathes(pathes,n=5)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -866,9 +652,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "linesEachStation['永定门']"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
